# Beacon

./: .gitignore  CHAINCODE_INTEGRATION.md  DEVELOPMENT_SETUP.md  GITHUB_COLLABORATION_GUIDE.md  PROJECT_STRUCTURE.md
.github/workflows/: basic-checks.yml  ci.yml  pr-checks.yml
beacon-blockchain/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  rust-toolchain.toml
beacon-blockchain/crates/beacon-api/: Cargo.toml  README.md
beacon-blockchain/crates/beacon-api/examples/: api_test.sh
beacon-blockchain/crates/beacon-api/src/: lib.rs  main.rs  server.rs
beacon-blockchain/crates/beacon-api/src/handlers/: auth.rs  blockchain.rs  health.rs  mod.rs  state.rs  transactions.rs
beacon-blockchain/crates/beacon-api/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
beacon-blockchain/crates/beacon-chaincode/: Cargo.toml  build.rs
beacon-blockchain/crates/beacon-chaincode/src/: executor.rs  grpc_server.rs  lib.rs
beacon-blockchain/crates/beacon-consensus/: Cargo.toml
beacon-blockchain/crates/beacon-consensus/src/: engine.rs  lib.rs  proof_of_authority.rs  validator.rs
beacon-blockchain/crates/beacon-core/: Cargo.toml
beacon-blockchain/crates/beacon-core/src/: block.rs  crypto.rs  error.rs  lib.rs  transaction.rs  types.rs
beacon-blockchain/crates/beacon-crypto/: Cargo.toml
beacon-blockchain/crates/beacon-crypto/src/: keys.rs  lib.rs  signatures.rs
beacon-blockchain/crates/beacon-networking/: Cargo.toml
beacon-blockchain/crates/beacon-networking/src/: discovery.rs  lib.rs  messaging.rs  network.rs  peer.rs  protocol.rs
beacon-blockchain/crates/beacon-node/: Cargo.toml
beacon-blockchain/crates/beacon-node/src/: config.rs  main.rs  node.rs
beacon-blockchain/crates/beacon-storage/: Cargo.toml
beacon-blockchain/crates/beacon-storage/src/: blockchain.rs  config.rs  database.rs  lib.rs  state.rs  transactions.rs
beacon-blockchain/docker/: entrypoint.sh
beacon-blockchain/docker/config/: beacon.toml
beacon-blockchain/docker/monitoring/: prometheus-dev.yml  prometheus.yml
beacon-blockchain/docker/nginx/: nginx.conf
beacon-blockchain/docs/: README.md  containerization.md  docker-image-guide.md
beacon-blockchain/docs/access/: README.md  deployment.md  network-admin.md
beacon-blockchain/docs/api/: README.md  complete-api-reference.md  quickstart.md
beacon-blockchain/docs/deployment/: linux-permission-fix.md
beacon-blockchain/docs/testing/: api-tests.md  integration-tests.md  performance-tests.md  test-guide.md
beacon-blockchain/proto/: chaincode.proto
beacon-blockchain/scripts/: build-deploy.ps1  build-deploy.sh  setup-linux.sh
beacon-blockchain/sdk/go/: go.mod  go.sum
beacon-blockchain/sdk/go/examples/: README.md
beacon-blockchain/sdk/go/examples/gateway-management/: README.md  go.mod  main.go
beacon-blockchain/sdk/go/examples/identity-verification/: go.mod  main.go
beacon-blockchain/sdk/go/examples/supply-chain/: go.mod  main.go
beacon-blockchain/sdk/go/proto/: chaincode.pb.go  chaincode.proto  chaincode_grpc.pb.go
beacon-blockchain/sdk/go/shim/: chaincode.go  utils.go
beacon-blockchain/tests/: Cargo.toml  README.md  test_api.ps1  test_api.sh
beacon-blockchain/tests/api/: auth_test.rs  mod.rs
beacon-blockchain/tests/integration/: api_storage_integration.rs  mod.rs
beacon-blockchain/tests/scripts/: run_all_tests.ps1  run_all_tests.sh
edge-gateway-scs/: docker-compose.yml  requirements.txt  setup-dev.py
edge-gateway-scs/docs/: README.md  deployment.md  quickstart.md  troubleshooting.md
edge-gateway-scs/gateway-app/: Dockerfile  README.md  deploy.ps1  deploy.sh  docker-compose.yml  requirements.txt
edge-gateway-scs/gateway-app/config/: gateway.toml
edge-gateway-scs/gateway-app/docker/monitoring/: prometheus.yml
edge-gateway-scs/gateway-app/docker/mosquitto/config/: acl  mosquitto.conf
edge-gateway-scs/gateway-app/src/: main.py
edge-gateway-scs/gateway-app/src/api/: server.py
edge-gateway-scs/gateway-app/src/blockchain/: __init__.py  audit_logger.py  client.py  device_registry.py  gateway_mgmt.py
edge-gateway-scs/gateway-app/src/discovery/: __init__.py  io_scs_discovery.py
edge-gateway-scs/gateway-app/src/iot/: __init__.py  coap_handler.py  mqtt_handler.py
edge-gateway-scs/gateway-app/src/policy/: __init__.py  access_control.py  cache.py  enforcer.py  rule_engine.py
edge-gateway-scs/gateway-app/src/vpn/: client.py
edge-gateway-scs/iot-broker/coap-server/: Dockerfile  requirements.txt
edge-gateway-scs/iot-broker/coap-server/config/: coap.conf
edge-gateway-scs/iot-broker/coap-server/src/: coap_server.py
edge-gateway-scs/iot-broker/mosquitto/: Dockerfile  acl.conf  mosquitto.conf  passwd
edge-gateway-scs/vpn-client/openvpn/: Dockerfile  entrypoint.sh
edge-gateway-scs/vpn-client/openvpn/config/: client.ovpn
edge-gateway-scs/vpn-client/openvpn/scripts/: health-check.sh  health-server.sh
edge-gateway-scs/vpn-client/wireguard/: Dockerfile  entrypoint.sh
edge-gateway-scs/vpn-client/wireguard/config/: wg0.conf
edge-gateway-scs/vpn-client/wireguard/scripts/: health-check.sh  health-server.sh
