[workspace]
members = [
    "crates/beacon-node",
    "crates/beacon-core",
    "crates/beacon-consensus",
    "crates/beacon-networking",
    "crates/beacon-storage",
    "crates/beacon-api",
    "crates/beacon-chaincode",
    "crates/beacon-crypto",
]

resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Networking
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "mdns",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "autonat",
    "relay",
    "dcutr",
    "upnp",
    "macros",
    "serde",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Database
rocksdb = "0.21"

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
futures = "0.3"

# Testing
criterion = "0.5"
