[package]
name = "beacon-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core BEACON crates
beacon-api = { path = "../crates/beacon-api" }
beacon-storage = { path = "../crates/beacon-storage" }
beacon-chaincode = { path = "../crates/beacon-chaincode" }
beacon-core = { path = "../crates/beacon-core" }

# Testing framework
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test = "0.4"

# HTTP testing
axum = { version = "0.7", features = ["headers"] }
tower = { version = "0.4", features = ["util", "timeout"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }

# JSON handling
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
futures = "0.3"

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Assertions and testing utilities
assert_matches = "1.5"
pretty_assertions = "1.4"
test-case = "3.1"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

# System monitoring
sysinfo = "0.29"

# Mock and test utilities
mockall = "0.11"
tempfile = "3.5"

# Logging for tests
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Additional dev dependencies for benchmarks
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[[test]]
name = "api_tests"
path = "api/mod.rs"

[[bench]]
name = "api_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks" 
harness = false

[features]
default = []
test-utils = []
mock-storage = []
performance-tests = []
integration-tests = []
