[package]
name = "beacon-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beacon-api"
path = "src/main.rs"

[dependencies]
# Internal dependencies
beacon-core = { path = "../beacon-core" }
beacon-storage = { path = "../beacon-storage" }
beacon-chaincode = { path = "../beacon-chaincode" }

# Web framework
axum = { version = "0.7", features = ["macros", "json"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "timeout"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.1"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types
hyper = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
