[package]
name = "beacon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
subtle = "2.5"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
