[package]
name = "beacon-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
beacon-core = { path = "../beacon-core" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
