[package]
name = "beacon-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
beacon-core = { path = "../beacon-core" }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
tokio = { workspace = true, features = ["test-util"] }
